# yart

./: .gitignore  CMakeLists.txt  README.md
metal-cmake/: CMakeLists.txt  impl.cpp
models/: cornell.glb  cornell_gtest.glb  cornell_suzanne.glb
src/: main.cpp
src/bsdf/: dielectric.cpp  dielectric.hpp  diffuse.cpp  diffuse.hpp  glossy.cpp  glossy.hpp  luts.cpp  luts.hpp  metal.cpp  metal.hpp  parametric.cpp  parametric.hpp
src/core/: bsdf.cpp  bsdf.hpp  buffer.hpp  bvh.hpp  camera.hpp  color-utils.hpp  color.cpp  color.hpp  core.hpp  estimator.hpp  integrator.hpp  light-sampler.cpp  light-sampler.hpp  light.cpp  light.hpp  materials.hpp  mesh.hpp  node.hpp  primitives.hpp  ray.hpp  renderer.hpp  rng.cpp  rng.hpp  sampler.cpp  sampler.hpp  scene.hpp  scrambler.hpp  sobol-matrices.cpp  sobol-matrices.hpp  sobol.tables  spectrum.cpp  spectrum.hpp  texture.cpp  texture.hpp  tonemapping.hpp  types.hpp  utils.hpp
src/cpu/: basic-integrator.cpp  basic-integrator.hpp  cpu-renderer.cpp  cpu-renderer.hpp  hit.hpp  integrator.cpp  integrator.hpp  mis-integrator.cpp  mis-integrator.hpp  naive-integrator.cpp  naive-integrator.hpp  random.hpp  ray-integrator.cpp  ray-integrator.hpp  tile-renderer.hpp
src/frontend/metal/: app-delegate.cpp  app-delegate.hpp  app.cpp  app.hpp  display.metal  utils.hpp  view-delegate.cpp  view-delegate.hpp
src/frontend/metal-sdl2/: display.metal  helpers.hpp  helpers.mm  main.cpp  main.hpp
src/gltf/: gltf.cpp  gltf.hpp
src/math/: bounds.hpp  complex.hpp  frame.hpp  mat.hpp  math.hpp  math_base.hpp  random.cpp  random.hpp  ray.hpp  sampling.cpp  sampling.hpp  transform.hpp  vec.hpp
src/output/: ppm.cpp  ppm.hpp
tools/: convert-hdri.cpp
xoshiro-rng/: xoshiro.hpp
